tests/sumo/basic/vtypes/invalid_type/options.sumo
--no-step-log --no-duration-log --net-file=net.net.xml --routes=input_routes.rou.xml --tripinfo-output=tripinfos.xml -b 0 -e 1000
